Revised fix to #1313, News Box wraps text

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -19,6 +19,13 @@
   }
 }
 
+.news_description
+{
+  height: 98px ; 
+  word-wrap: break-word ;
+  overflow: hidden  
+}
+
 .news_featured_image
 {
   float:left;
